gitops/core/n8n/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: n8n
spec:
  parentRefs:
    - name: envoy
      namespace: envoy-gateway
  hostnames:
    - "n8n.delaleusystems.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: n8n
          port: 80
