gitops/core/n8n/securitypolicy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: n8n
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: n8n
  oidc:
    provider:
      issuer: https://login.delaleusystems.com/dex/
    clientID: envoy-gateway
    clientSecret:
      name: dex-envoy-client
    redirectURL: "https://n8n.delaleusystems.com/oauth2/callback"
    logoutPath: "/logout"
